--- a/observer_pattern/index.html
+++ b/observer_pattern/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>JavaScript Sandbox: Patterns</h1>
+    <button class="sub-ms">Subscribe to Milliseconds</button>
+    <button class="unsub-ms">Unsubscribe to Milliseconds</button>
+    <br><br>
+    <button class="fire">Fire</button>
     <script src="app.js"></script>
 </body>
 
